@@ -90,7 +90,6 @@
                         <configuration>
                             <mainClass>gameoflife.Main</mainClass>
                             <buildArgs>
-                                <arg>--enable-preview</arg>
                                 <arg>--report-unsupported-elements-at-runtime</arg>
                             </buildArgs>
                         </configuration>
